examples/test/testpolicy11990.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11990
  namespace: namespace221
spec:
  podSelector:
    matchLabels:
      key46: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value15
          key22: value23
          key16: value10
      podSelector:
        matchLabels:
          key3: value33
          key33: value27
          key6: value20
